--- a/css/styles.css
+++ b/css/styles.css
@@ -497,10 +497,10 @@ img {
   width: 100%;
   height: 100%;
   background-color: rgba(46, 47, 66, 0.4);
-
   opacity: 0;
   pointer-events: none;
-  transition: opacity 250ms linear;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-open {
@@ -523,6 +523,7 @@ img {
   background-color: #fcfcfc;
   transform: translate(-50%, -50%);
   overflow-y: auto;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /*<-------------sectione-modal-buttom----------->*/
@@ -531,7 +532,7 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 8px;
+  padding: 8px; 
   position: absolute;
   border-radius: 50%;
   background-color: #e7e9fc;
@@ -541,16 +542,26 @@ img {
   border: 1px solid rgba(0, 0, 0, 0.1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+    cursor: pointer; 
+  width: 24px
+  height: 24px; 
+  }
 
-.modal-btn-close:hover {
+.modal-btn-close:hover,
+.modal-btn-close:focus {
+  border: none;
   background-color: #404bbf;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-btn-close:hover .modal-btn-close-img {
+.modal-btn-close-img {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-btn-close:hover .modal-btn-close-img,
+.modal-btn-close:focus .modal-btn-close-img
+ {
   fill: #ffffff;
-  /* transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
 
 /*<-------------sectione-modal-title----------->*/
@@ -576,7 +587,7 @@ img {
 .review-form-label {
   display: block;
   font-size: 12px;
-  line-height: 1.16;
+  line-height: 1.17;
   letter-spacing: 0.04em;
   color: #8e8f99;
   margin-bottom: 4px;
@@ -597,6 +608,7 @@ img {
   background-color: transparent;
   height: 40px;
   padding-left: 38px;
+  outline: transparent; 
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -617,18 +629,23 @@ img {
   fill: #4d5ae5;
 }
 
+.review-form-wrapper-comment {
+  margin-bottom: 16px;
+}
+
 .review-form-comment {
   width: 100%;
   height: 120px;
   font-size: 12px;
-  line-height: 1.16;
+  line-height: 1.17;
   letter-spacing: 0.04em;
-  color: #2e2f42;
+  color: rgba(46, 47, 66, 0.4); 
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
   padding: 8px 16px;
-  margin-bottom: 16px;
+  /* margin-bottom: 16px; */
   background-color: transparent;
+  outline: transparent;
   resize: none;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -648,7 +665,7 @@ img {
 
 .review-form-policy-label {
   font-size: 12px;
-  line-height: 1.16;
+  line-height: 1.17;
   letter-spacing: 0.04em;
   color: #8e8f99;
 }
@@ -671,6 +688,7 @@ img {
   border: 1px solid rgba(46, 47, 66, 0.4);
   fill: transparent;
   cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .review-form-policy-checkbox:checked
@@ -679,6 +697,7 @@ img {
   background-color: #404bbf;
   border-color: #404bbf;
   fill: #f4f4fd;
+  border: none; 
 }
 
 .review-form-send-btn {
