--- a/css/styles.css
+++ b/css/styles.css
@@ -532,20 +532,19 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 8px; 
   position: absolute;
-  border-radius: 50%;
-  background-color: #e7e9fc;
   top: 24px;
   right: 24px;
+  width: 24px;
+  height: 24px;
   border-radius: 50%;
+  background-color: #e7e9fc;
   border: 1px solid rgba(0, 0, 0, 0.1);
+  padding: 0;
+  cursor: pointer;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    cursor: pointer; 
-  width: 24px
-  height: 24px; 
-  }
+}
 
 .modal-btn-close:hover,
 .modal-btn-close:focus {
@@ -559,8 +558,7 @@ img {
 }
 
 .modal-btn-close:hover .modal-btn-close-img,
-.modal-btn-close:focus .modal-btn-close-img
- {
+.modal-btn-close:focus .modal-btn-close-img {
   fill: #ffffff;
 }
 
@@ -608,7 +606,7 @@ img {
   background-color: transparent;
   height: 40px;
   padding-left: 38px;
-  outline: transparent; 
+  outline: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -639,7 +637,7 @@ img {
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
-  color: rgba(46, 47, 66, 0.4); 
+  color: rgba(46, 47, 66, 0.4);
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
   padding: 8px 16px;
@@ -688,7 +686,9 @@ img {
   border: 1px solid rgba(46, 47, 66, 0.4);
   fill: transparent;
   cursor: pointer;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .review-form-policy-checkbox:checked
@@ -697,7 +697,7 @@ img {
   background-color: #404bbf;
   border-color: #404bbf;
   fill: #f4f4fd;
-  border: none; 
+  border: none;
 }
 
 .review-form-send-btn {
