--- a/css/styles.css
+++ b/css/styles.css
@@ -488,7 +488,7 @@ img {
 }
 
 .footer-subscribe {
-  margin-left: auto;
+  margin-left: 80px;
 }
 
 .footer-subscribe-title {
@@ -498,6 +498,11 @@ img {
   letter-spacing: 0.02em;
   color: #fff;
   margin-bottom: 16px;
+}
+
+.footer-subscribe-form {
+  display: flex;
+  gap: 24px;
 }
 
 .footer-subscribe-input {
@@ -539,12 +544,11 @@ img {
   color: #fff;
   border: none;
   cursor: pointer;
-  display: inline-flex;
+  display: flex;
   justify-content: center;
   align-items: center;
   margin-right: auto;
   margin-left: 24px;
-  gap: 16px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -555,6 +559,7 @@ img {
 
 .footer-subscribe-btn-img {
   fill: #fff;
+  margin-left: 16px;
 }
 
 /*<-------------sectione-backdrop----------->*/
